--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -8,7 +8,7 @@
     <string name="menu_share">Condividi</string>
     <string name="menu_help">Aiuto</string>
     <string name="menu_receive">Ricevi</string>
-    <string name="menu_rename">Rinomina &#8230;</string>
+    <string name="menu_rename">Rinomina</string>
     <string name="menu_archive">Archivia</string>
     <string name="menu_backup">Backup</string>
     <string name="menu_changepw">Cambia passphrase</string>
@@ -282,8 +282,8 @@
     <string name="tx_account">Account #</string>
 
     <string name="send_sweepall">Manda tutti i fondi confermati in questo account!</string>
-    <string name="tx_subaddress">Sottoindirizzo #%1$d</string>
-    <string name="generate_address_label_sub">Sottoindirizzo pubblico #%1$d</string>
+    <string name="tx_subaddress">Sottoindirizzo</string>
+    <string name="generate_address_label_sub">Sottoindirizzo pubblico #%1$d: %2$s</string>
 
     <string name="menu_language">Lingua</string>
     <string name="language_system_default">Usa lingua di sistema</string>
@@ -415,4 +415,14 @@
     <string name="info_xmrto_help_xmr"><![CDATA[
         <b>Please enter or scan a Monero address.</b>
     ]]></string>
+
+    <string name="subbaddress_title">Subaddresses</string>
+    <string name="subbaddress_name_hint">Subaddress Name</string>
+    <string name="max_subaddress_warning">Too many unused addresses - use some to enable creating more!</string>
+    <string name="max_account_warning">Too many unused accounts - use some to enable creating more!</string>
+    <string name="subaddress_tx_label">Transactions for this subaddress:</string>
+    <string name="subaddress_notx_label">No transactions for this subaddress yet</string>
+    <string name="subaddress_select_label">Select a subaddress</string>
+    <string name="subaddress_details_hint">Long-press for details</string>
+
 </resources>
