--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -8,7 +8,7 @@
     <string name="menu_share">Delen</string>
     <string name="menu_help">Help</string>
     <string name="menu_receive">Ontvangen</string>
-    <string name="menu_rename">Hernoemen…</string>
+    <string name="menu_rename">Hernoemen</string>
     <string name="menu_archive">Archiveren</string>
     <string name="menu_backup">Back-up</string>
     <string name="menu_changepw">Wachtzin wijzigen</string>
@@ -277,8 +277,8 @@
     <string name="tx_account">Accountnr.</string>
 
     <string name="send_sweepall">Al het bevestigde geld in dit account verzenden!</string>
-    <string name="tx_subaddress">Subadres #%1$d</string>
-    <string name="generate_address_label_sub">Openbaar subadres #%1$d</string>
+    <string name="tx_subaddress">Subadres</string>
+    <string name="generate_address_label_sub">Openbaar subadres #%1$d: %2$s</string>
 
     <string name="menu_language">Taal</string>
     <string name="language_system_default">Systeemtaal gebruiken</string>
@@ -412,4 +412,14 @@
     <string name="info_xmrto_help_xmr"><![CDATA[
         <b>Please enter or scan a Monero address.</b>
     ]]></string>
+
+    <string name="subbaddress_title">Subaddresses</string>
+    <string name="subbaddress_name_hint">Subaddress Name</string>
+    <string name="max_subaddress_warning">Too many unused addresses - use some to enable creating more!</string>
+    <string name="max_account_warning">Too many unused accounts - use some to enable creating more!</string>
+    <string name="subaddress_tx_label">Transactions for this subaddress:</string>
+    <string name="subaddress_notx_label">No transactions for this subaddress yet</string>
+    <string name="subaddress_select_label">Select a subaddress</string>
+    <string name="subaddress_details_hint">Long-press for details</string>
+
 </resources>
