--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -8,7 +8,7 @@
     <string name="menu_share">Partilhar</string>
     <string name="menu_help">Ajuda</string>
     <string name="menu_receive">Receber</string>
-    <string name="menu_rename">Renomear &#8230;</string>
+    <string name="menu_rename">Renomear</string>
     <string name="menu_archive">Arquivar</string>
     <string name="menu_backup">Cópia de segurança</string>
     <string name="menu_changepw">Alterar palavra passe</string>
@@ -282,8 +282,8 @@
     <string name="tx_account">Conta #</string>
 
     <string name="send_sweepall">Enviar todos os fundos confirmados para esta conta!</string>
-    <string name="tx_subaddress">Subaddress #%1$d</string>
-    <string name="generate_address_label_sub">Subaddress Publico #%1$d</string>
+    <string name="tx_subaddress">Subaddress</string>
+    <string name="generate_address_label_sub">Subaddress Publico #%1$d: %2$s</string>
 
     <string name="menu_language">Linguagem</string>
     <string name="language_system_default">Usar linguagem de sistema</string>
@@ -416,4 +416,14 @@
     <string name="info_xmrto_help_xmr"><![CDATA[
         <b>Please enter or scan a Monero address.</b>
     ]]></string>
+
+    <string name="subbaddress_title">Subaddresses</string>
+    <string name="subbaddress_name_hint">Subaddress Name</string>
+    <string name="max_subaddress_warning">Too many unused addresses - use some to enable creating more!</string>
+    <string name="max_account_warning">Too many unused accounts - use some to enable creating more!</string>
+    <string name="subaddress_tx_label">Transactions for this subaddress:</string>
+    <string name="subaddress_notx_label">No transactions for this subaddress yet</string>
+    <string name="subaddress_select_label">Select a subaddress</string>
+    <string name="subaddress_details_hint">Long-press for details</string>
+
 </resources>
