--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -8,7 +8,7 @@
     <string name="menu_share">Partage</string>
     <string name="menu_help">Aide</string>
     <string name="menu_receive">Recevoir</string>
-    <string name="menu_rename">Renommer &#8230;</string>
+    <string name="menu_rename">Renommer</string>
     <string name="menu_archive">Archiver</string>
     <string name="menu_backup">Sauvegarder</string>
     <string name="menu_changepw">Modifier Phrase secrète</string>
@@ -283,8 +283,8 @@
     <string name="tx_account">Compte #</string>
 
     <string name="send_sweepall">Envoyer tous les fonds confirmés sur ce compte !</string>
-    <string name="tx_subaddress">Sous-adresse #%1$d</string>
-    <string name="generate_address_label_sub">Sous-adresse publique #%1$d</string>
+    <string name="tx_subaddress">Sous-adresse</string>
+    <string name="generate_address_label_sub">Sous-adresse publique #%1$d: %2$s</string>
 
     <string name="fab_restore_ledger">Restaurer depuis Ledger Nano S</string>
 
@@ -416,4 +416,14 @@
     <string name="info_xmrto_help_xmr"><![CDATA[
         <b>Please enter or scan a Monero address.</b>
     ]]></string>
+
+    <string name="subbaddress_title">Subaddresses</string>
+    <string name="subbaddress_name_hint">Subaddress Name</string>
+    <string name="max_subaddress_warning">Too many unused addresses - use some to enable creating more!</string>
+    <string name="max_account_warning">Too many unused accounts - use some to enable creating more!</string>
+    <string name="subaddress_tx_label">Transactions for this subaddress:</string>
+    <string name="subaddress_notx_label">No transactions for this subaddress yet</string>
+    <string name="subaddress_select_label">Select a subaddress</string>
+    <string name="subaddress_details_hint">Long-press for details</string>
+
 </resources>
