--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -8,7 +8,7 @@
     <string name="menu_share">Megosztás</string>
     <string name="menu_help">Segítség</string>
     <string name="menu_receive">Fogadás</string>
-    <string name="menu_rename">Átnevezés&#8230;</string>
+    <string name="menu_rename">Átnevezés</string>
     <string name="menu_archive">Archiválás</string>
     <string name="menu_backup">Biztonsági mentés</string>
     <string name="menu_changepw">Jelszómódosítás</string>
@@ -280,8 +280,8 @@
     <string name="tx_account">Számla #</string>
 
     <string name="send_sweepall">Teljes megerősített egyenleg küldése!</string>
-    <string name="tx_subaddress">Alcím #%1$d</string>
-    <string name="generate_address_label_sub">Nyilvános alcím #%1$d</string>
+    <string name="tx_subaddress">Alcím</string>
+    <string name="generate_address_label_sub">Nyilvános alcím #%1$d: %2$s</string>
 
     <string name="menu_language">Nyelv</string>
     <string name="language_system_default">Rendszernyelv használata</string>
@@ -414,4 +414,14 @@
     <string name="info_xmrto_help_xmr"><![CDATA[
         <b>Please enter or scan a Monero address.</b>
     ]]></string>
+
+    <string name="subbaddress_title">Subaddresses</string>
+    <string name="subbaddress_name_hint">Subaddress Name</string>
+    <string name="max_subaddress_warning">Too many unused addresses - use some to enable creating more!</string>
+    <string name="max_account_warning">Too many unused accounts - use some to enable creating more!</string>
+    <string name="subaddress_tx_label">Transactions for this subaddress:</string>
+    <string name="subaddress_notx_label">No transactions for this subaddress yet</string>
+    <string name="subaddress_select_label">Select a subaddress</string>
+    <string name="subaddress_details_hint">Long-press for details</string>
+
 </resources>
