--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -8,7 +8,7 @@
     <string name="menu_share">Zdieľaj</string>
     <string name="menu_help">Pomoc</string>
     <string name="menu_receive">Prijať</string>
-    <string name="menu_rename">Premenovať &#8230;</string>
+    <string name="menu_rename">Premenovať</string>
     <string name="menu_archive">Archivovať</string>
     <string name="menu_backup">Záloha</string>
     <string name="menu_changepw">Zmena Hesla</string>
@@ -278,8 +278,8 @@
     <string name="tx_account">Účet #</string>
 
     <string name="send_sweepall">Pošli všetky potvrdené prostriedky na tomto účte!</string>
-    <string name="tx_subaddress">Subadresa #%1$d</string>
-    <string name="generate_address_label_sub">Verejná Subadresa #%1$d</string>
+    <string name="tx_subaddress">Subadresa</string>
+    <string name="generate_address_label_sub">Verejná Subadresa #%1$d: %2$s</string>
 
     <string name="menu_language">Jazyk</string>
     <string name="language_system_default">Použi jazyk systému</string>
@@ -413,4 +413,14 @@
     <string name="info_xmrto_help_xmr"><![CDATA[
         <b>Please enter or scan a Monero address.</b>
     ]]></string>
+
+    <string name="subbaddress_title">Subaddresses</string>
+    <string name="subbaddress_name_hint">Subaddress Name</string>
+    <string name="max_subaddress_warning">Too many unused addresses - use some to enable creating more!</string>
+    <string name="max_account_warning">Too many unused accounts - use some to enable creating more!</string>
+    <string name="subaddress_tx_label">Transactions for this subaddress:</string>
+    <string name="subaddress_notx_label">No transactions for this subaddress yet</string>
+    <string name="subaddress_select_label">Select a subaddress</string>
+    <string name="subaddress_details_hint">Long-press for details</string>
+
 </resources>
